Entries are sorted chronologically from oldest to youngest within each release,
releases are sorted from youngest to oldest.

version 10.1:
- arm: hpeldsp: fix put_pixels8_y2_{,no_rnd_}armv6
- arm: hpeldsp: prevent overreads in armv6 asm (bug/646)
- avfilter: Add missing emms_c when needed
- rtmpproto: Check the buffer sizes when copying app/playpath strings
- swscale: Fix an undefined behaviour
- vp9: Read the frame size as unsigned
- dcadec: Use correct channel count in stereo downmix check
- dcadec: Do not decode the XCh extension when downmixing to stereo
- matroska: add the Opus mapping
- matroskadec: read the CodecDelay element
- rtmpproto: Make sure to pass on the error code if read_connect failed
- lavr: allocate the resampling buffer with a positive size
- mp3enc: Properly write bitrate value in XING header (debian/736088)
- golomb: Fix the implementation of get_se_golomb_long

version 10:
- af_channelmap: fix ONE_STR mapping mode
- matroskaenc: HEVC fixeswrite private data in hvcC format for HEVC.
- doc: Point to the correct, actually maintained gas-preprocessor repo
- http: Add support reading ICY metadata
- configure: Support older version of openjpeg1

version 10~beta2:
- compand audio filter
- and many various smaller fixes, for a full changelog, please refer to:
  cf. https://git.libav.org/?p=libav.git;a=shortlog;h=refs/tags/v10_beta2

version 10~beta1:
- av_strnstr
- support ID3v2 tags in ASF files
- reference-counting for AVFrame and AVPacket data
- avconv now fails when input options are used for output file
  or vice versa
- avconv options -filter_script and -filter_complex_script, which allow a
  filtergraph description to be read from a file
- uniform options syntax across all filters
- interlace filter
- JPEG 2000 decoder
- asetpts filter (same as setpts, but for audio)
- trim and atrim filters
- avconv -t and -ss (output-only) options are now sample-accurate when
  transcoding audio